<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:maxLength="35"
        android:hint="@string/hint_word"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
    android:id="@+id/etText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:hint="@string/hint_text"
    android:inputType="textAutoComplete"
    android:padding="@dimen/small_padding"
    android:layout_marginBottom="@dimen/big_padding"
    android:layout_marginTop="@dimen/big_padding"
    android:textSize="18sp" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_category"
        android:maxLength="25"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_deadline"
        android:inputType="date"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <TextView
        android:labelFor="@id/spPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPriorityText"/>
    <Spinner
        android:id="@+id/spPriority"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:entries="@array/Priorities">
    </Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/bSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/big_padding"
        android:text="@string/button_save"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white" />

</LinearLayout>
